syntax = "proto3";
option csharp_namespace = "LockProviderGrpc";

package LockProvider;

service LockProvider {
  rpc Status (empty) returns (StatusResponse);
  rpc List (LocksListRequest) returns (LocksListResponse);
  rpc Acquire (LockAcquireRequest) returns (LockResponse);
  rpc IsLocked (LockRequest) returns (LockResponse);
  rpc Release (LockRequest) returns (LockResponse);
  rpc ReleaseMany (LockRequest) returns (LocksListResponse);
}

message empty {

}

message StatusResponse {
  string result = 1;
  string serverVersion = 2;
  string uptime = 3;
  int32 locks = 4;
  int32 waitingLocks = 5;
  string error = 6;
  string timeStamp = 7;
}

message LockAcquireRequest {
  string owner = 1;
  string name = 2;
  int32 timeout = 3;
}

message LockRequest {
  string owner = 1;
  string name = 2;
}

message LockResponse {
  string owner = 1;
  string name = 2;
  string result = 3;
  string error = 4;
  string timeStamp = 5;
}

message LocksListRequest {
  string owner = 1;
  string name = 2;
}

message LockInfo {
  string owner = 1;
  string name = 2;
  string acquiredAt = 3;
}

message LocksListResponse {
  string owner = 1;
  string name = 2;
  string result = 3;
  string error = 4;
  int32 count = 5;
  repeated LockInfo locks = 6;
  string timeStamp = 7;
}